Add Hexagon component

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,6 @@
 
 .welcome {
   min-height: calc(100vh - var(--nav-bar-height));
-
 }
 
 .welcome__content {
@@ -98,10 +97,30 @@
   height: 40px;
 }
 
-.skills {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
+.hexagon {
+  position: relative;
+  top: 0;
+  display: inline-block;
+  min-width: min-content;
+}
+.hexagon__image {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.hexagon__content-wrapper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;;
 }
 
 @keyframes slideIn {
