--- a/src/hexagon.css
+++ b/src/hexagon.css
@@ -8,6 +8,7 @@
 .hexagon {
     height: var(--hexagon-size);
     width: var(--hexagon-size);
+    aspect-ratio: 1 / 1;
     position: relative;
     top: 0;
     z-index: 1;
@@ -70,11 +71,19 @@
     bottom: 1px;
 }
 
+.hexagon__content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* Hexagon grid */
 .hexagon-grid {
   justify-content: space-around;
   flex-wrap: wrap;
-  padding : var(--padding) 0;
+  padding: var(--padding) 0 100px 0;
   position: relative;
   left: calc(var(--hexagon-size) * 0.130);
 }
@@ -87,3 +96,10 @@
 .hexagon-grid__row-even {
     margin-left: calc(var(--hexagon-size) * 0.51);
 }
+
+@media screen and (max-width: 769px) {
+    .hexagon-grid {
+      margin-top: 100px;
+      scale: 1.5 1.5;
+    }
+  }
