--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 :root {
-  /* --background-color: #1c1c25; */
+  --nav-bar-height: 80px;
+  --background-color: #1c1c25;
   --color-custom-blue: #1d89ff;
+  --color-custom-purple: #c533c8;
   --text-gradient: linear-gradient(to right, var(--color-custom-blue), #c533c8);
   --gap: 30px;
   --padding: 30px;
