Update Observer component

--- a/src/App.css
+++ b/src/App.css
@@ -106,10 +106,11 @@ html {
 }
 
 .observer {
-  transition: all 3s 1s;
+  visibility: hidden;
 }
 .observer--active {
-  animation: fadeIn 700ms 1000ms forwards;
+  animation: slideDownUp 700ms 300ms forwards;
+}
 }
 
 @keyframes slideIn {
