--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,6 @@ html {
 
 #container {
   overflow: hidden;
-  /* background-color: var(--background-color); */
 }
 
 .layout {
@@ -133,6 +132,10 @@ html {
   border: none;
   z-index: 999;
   padding: 0;
+  margin-left: auto;
+  position: relative;
+  width: 25px;
+  aspect-ratio: 1 / 1;
 }
 
 .welcome .socials {
@@ -190,8 +193,14 @@ html {
   background-color: black;
   background-image: var(--text-gradient);
 }
-.footer__content {
+.footer__grid {
   padding: var(--padding) 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: var(--gap)
+}
+.footer__grid-item:nth-child(2) {
+  text-align: center;
 }
 
 @media screen and (max-width: 769px) {
@@ -206,6 +215,10 @@ html {
   .nav-wrapper {
     display: none;
   }
+
+  .footer__grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 @keyframes slideIn {
@@ -217,6 +230,20 @@ html {
     translate: 0%;
     visibility: visible;    
     filter: blur(0);
+  }
+}
+@keyframes slideDownUp {
+  from {
+    opacity: 0;
+    blur: 5px;
+    translate: 0 5vh;
+    visibility: hidden;
+  }
+  to {
+    opacity: 1;
+    blur: 0;
+    translate: 0 0vh;
+    visibility: visible;
   }
 }
 @keyframes blurIn {
