--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,10 @@ html {
   overflow: hidden;
 }
 
+.main {
+  padding-bottom: 50px;
+}
+
 .layout {
   width: var(--layout-width);
   max-width: var(--layout-max-width);
