--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   --color-custom-blue: #1d89ff;
   --color-custom-purple: #c533c8;
   --text-gradient: linear-gradient(to right, var(--color-custom-blue), #c533c8);
+
   --gap: 30px;
   --padding: 30px;
   --layout-width: 75%;
@@ -41,6 +42,7 @@ html {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   width: fit-content;
+  background-size: 230%;
 }
 .text-block {
   max-width: 60ch;
@@ -60,6 +62,7 @@ html {
   color: var(--color-custom-blue);
   margin: 0;
   width: fit-content;
+  background-size: 100%;
   visibility: hidden;
   animation: slideIn 1000ms 500ms forwards;
 }
@@ -167,10 +170,8 @@ html {
 
 .btn {
   background-color: transparent;
-  border: white 1px solid;
-  color: white;
   padding: 20px 80px;
-  border-radius: 999vmax;
+  border-radius: 5px;
   display: block;
   cursor: pointer;
   width: fit-content;
@@ -188,6 +189,9 @@ html {
 
 .project__link {
   margin: var(--padding) 0;
+  color: white;
+  background: var(--text-gradient);
+  background-size: 180%;
 }
 
 .observer {
