Remove some nav inline styling

--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,10 @@ html {
   left: 0;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.94);
+  translate: 100vmax;
+}
+.nav-mobile--opened {
+  translate: 0;
 }
 .nav-mobile__menu {
   /* box-shadow: -1px 0 16px #00000078; */
